erDiagram
    USER ||--o| PROFILE : "has"
    USER ||--o{ ADOPTED_TREE : "(sponsor) owns"
    USER ||--o{ ADOPTION_INTENT : "(sponsor) initiates"
    USER ||--o{ TREE_LOG : "(admin) create"
    
    USER ||--o{ TRANSACTION : "executes"
    
    TRANSACTION ||--o| PAYMENT : "generates"
    TRANSACTION }o--|| ADOPTION_INTENT : "references"
    
    ADOPTION_INTENT }o--|| TREE_SPECIES : "selects"
    ADOPTION_INTENT }o--|| FOREST_PLOT : "reserves"

    ADOPTED_TREE }o--|| TREE_SPECIES : "is species"
    ADOPTED_TREE }o--|| FOREST_PLOT : "planted in"
    ADOPTED_TREE ||--o{ TREE_LOG : "has history"

    USER {
        uuid id PK
        string email
        string password_hash
        string role_type "ADMIN | SPONSOR"
    }

    PROFILE {
        uuid id PK "FK to User.id"
        string full_name
        date date_of_birth
        int age
        int balance
    }

    PAYMENT {
        uuid id PK
        uuid transaction_id FK
        int amount
        string status "PENDING | FINISHED | FAILED | EXPIRED"
        string external_id
        string payment_url
        timestamp created_at
        timestamp expires_at
    }

    TRANSACTION {
        uuid id PK
        uuid user_id FK
        string reference_id "FK to AdoptionIntent"
        int amount
        string type "DEPOSIT | ADOPT | CARE"
        timestamp created_at
    }

    FOREST_PLOT {
        uuid id PK
        string location_name
        string address
        float available_space_m2
    }

    TREE_SPECIES {
        uuid id PK
        string common_name
        float space_required_m2
        int price
    }

    ADOPTION_INTENT {
        uuid id PK
        uuid sponsor_id FK
        uuid species_id FK
        uuid plot_id FK
        string custom_name
        string status "PENDING | EXPIRED | FULFILLED"
        timestamp created_at
    }

    ADOPTED_TREE {
        uuid id PK
        uuid sponsor_id FK
        uuid species_id FK
        uuid plot_id FK
        string custom_name
        timestamp last_care_date
        timestamp adopted_at
    }

    TREE_LOG {
        uuid id PK
        uuid adopted_tree_id FK
        uuid admin_id FK
        float current_height_meters
        string activity
        string note
        timestamp recorded_at
    }